package org.kesy.djob.sdu.api.model;

option java_package          = "org.kesy.djob.sdu.api.model";
option java_outer_classname  = "JobInfoModels";
option java_generic_services = true;

message JobInfo {
    optional string        id             = 1;
    optional string        name      = 2;
    optional string        runStatus        = 3;
    optional string        startMode        = 4  [default = "auto"];
    
    optional string        description      = 5;
    optional string        exception        = 6;

    optional string        execStrategy     = 7;
    optional string        execParam        = 8;
    optional string        execName         = 9;
    
    optional string        creator          = 10;
    optional string        createTime       = 11;
    optional string        lastModifiedTime = 12;
    
    optional int64 timeout        = 13;
    optional string label        = 14;  
    optional string        principal          = 15;

    repeated TaskInfo      tasks       = 16;
}

message TaskInfo {
    optional string id     = 1;
    optional string job_id     = 2;
    optional string finishTime   = 3;
    optional string startTime    = 4;
    optional string runStatus    = 5; 
    optional string description  = 6;
    optional string exception    = 7;
    optional int64 version        = 8;  
    optional int64 dataFrom         = 9; 
    optional int64 dataTo           = 10;
    optional int64 dataRow          = 11;
    optional double dataQuantity     = 12;
    optional int64 rejectedRow          = 13;
    optional bool isTimeout     = 14 [default = false];
    optional string node    = 17;
    optional string createTime       = 18;
    optional string lastModifiedTime = 19; 
    
    optional string        jobName      = 20;
    optional string        startMode        = 21;
    
    optional string        execStrategy     = 22;
    optional string        execName         = 23;
}

message JobInfoList {
    repeated JobInfo jobInfo = 1; 
}

message TaskInfoList {
    repeated TaskInfo taskInfo = 1; 
}

message StringType {
    optional string value = 1; 
}

message IntegerType {
    optional int32 value = 1; 
}

message StringList {
    repeated string value = 1; 
}

message VoidType {
}